# fantranslate

./: .gitignore  AGENTS.md  README.md  characters.yml  project.yml  pyproject.toml  requirements.txt
.ai_recordings/: agent.json  ai.json  yesno.json
.github/workflows/: lint.yml
playground/: test_chapter.txt
prompts/: character_translator.md  completeness_judge.md  detection_judge.md  extraction_agent.md
script/: fantranslate  lint  setup  test
src/: ai.py  ai_test_helpers.py  extract_characters.py  main.py  tracing.py
src/commands/: character.py
src/helpers/: context.py  fuzzy.py  settings.py
src/models/: character.py  character_collection.py  translation_string.py
src/tools/: character.py  hello.py
tests/: test_character_cli.py  test_character_collection.py  test_helpers.py  test_main.py  test_settings.py  test_tools.py  test_translation_string.py
